--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5.4", features = ["cargo", "derive"]}
 colored = "2.1.0"
+dotenvy = "0.15.7"
 rand = "0.8.5"
 regex = "1.10.5"
 rust-crypto = "0.2.36"
