--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,6 @@ colored = "2.1.0"
 dotenvy = "0.15.7"
 rand = "0.8.5"
 regex = "1.10.5"
-rust-crypto = "0.2.36"
+base64 = "0.22.1"
 serde_json = "1.0.116"
 toml = "0.8.12"
